--- a/yaml/buildconfig.yaml
+++ b/yaml/buildconfig.yaml
@@ -1,25 +1,39 @@
-apiVersion: build.openshift.io/v1
 kind: BuildConfig
+apiVersion: build.openshift.io/v1
 metadata:
   name: html-openshift-app
   labels:
     app: html-openshift-app
+    app.kubernetes.io/part-of: html-openshift-app
 spec:
-  source:
-    type: Git
-    git:
-      uri: https://github.com/MiBo200/m109-6.2.git
-      ref: main
-    contextDir: .
-  strategy:
-    type: Docker
-    dockerStrategy:
-      dockerfilePath: dockerfile
+  nodeSelector: null
   output:
     to:
       kind: ImageStreamTag
-      name: html-openshift-app:latest
+      name: 'html-openshift-app:latest'
+  resources: {}
+  successfulBuildsHistoryLimit: 5
+  failedBuildsHistoryLimit: 5
+  strategy:
+    type: Source
+    sourceStrategy:
+      from:
+        kind: ImageStreamTag
+        namespace: openshift
+        name: 'nginx:1.20-ubi7'
+  postCommit: {}
+  source:
+    type: git
+    git:
+      uri: 'https://github.com/MiBo200/m109-6.2.git'
+    sourceSecret:
+      name: html-openshift-app-github
   triggers:
-    - type: GitHub
-    - type: ConfigChange
+    - type: Generic
+      generic:
+        secretReference:
+          name: html-openshift-app-generic-webhook-secret
     - type: ImageChange
+      imageChange: {}
+    - type: ConfigChange
+  runPolicy: Serial
