--- a/yaml/deployment.yaml
+++ b/yaml/deployment.yaml
@@ -18,10 +18,8 @@ spec:
       containers:
       - name: html-openshift-app
         resources: {}
-         ports:
-          - containerPort: 8080
-            protocol: TCP
-        image: ghcr.io/mibo200/html-openshift-app:v1
+        ports:
+        - containerPort: 8080
+          protocol: TCP
+        image: image-registry.openshift-image-registry.svc:5000/254196-zlic-mborner1/html-openshift-app:latest
         imagePullPolicy: Always
-       
-    
