--- a/yaml/imagestream.yaml
+++ b/yaml/imagestream.yaml
@@ -1,6 +1,10 @@
-apiVersion: image.openshift.io/v1
 kind: ImageStream
+apiVersion: image.openshift.io/v1
 metadata:
   name: html-openshift-app
   labels:
     app: html-openshift-app
+    app.kubernetes.io/part-of: html-openshift-app
+spec:
+  lookupPolicy:
+    local: false
