--- a/yaml/secret.yaml
+++ b/yaml/secret.yaml
@@ -1,9 +1,22 @@
-apiVersion: v1
 kind: Secret
+apiVersion: v1
 metadata:
-  name: ghcr-auth
-  annotations:
-    tekton.dev/docker-0: https://ghcr.io
-type: kubernetes.io/dockerconfigjson
+  name: html-openshift-app-github
+  labels:
+    app: html-openshift-app
+    app.kubernetes.io/part-of: html-openshift-app
 data:
-  .dockerconfigjson: <BASE64_ENCODED_DOCKERCONFIG>
+  username: TWlCbzIwMA==
+  password: Z2hwXzl3VEYwOGxhekZNdUxFakJ5TmZZazdGTldPWjVSYTJYQ2FjVA==
+type: kubernetes.io/basic-auth
+---
+kind: Secret
+apiVersion: v1
+metadata:
+  name: html-openshift-app-generic-webhook-secret
+  labels:
+    app: html-openshift-app
+    app.kubernetes.io/part-of: html-openshift-app
+data:
+  WebHookSecretKey: MjMzOHQ3ZWNnbnU1NGJjcmU=
+type: Opaque
